Fixed Multi User Cookbook.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -10,11 +10,14 @@ verifier:
   name: inspec
 
 platforms:
-  - name: ubuntu-16.04
   - name: centos-7.1
 
 suites:
   - name: single
+    driver_config:
+      network:
+        - ["forwarded_port", {guest: 8080, host: 8001}]
+        - ["private_network", {ip: "192.168.33.1"}]
     run_list:
       - recipe[single::default]
     verifier:
@@ -22,6 +25,10 @@ suites:
         - test/recipes
     attributes:
   - name: multiple
+    driver_config:
+      network:
+        - ["forwarded_port", {guest: 8080, host: 8002}]
+        - ["private_network", {ip: "192.168.33.2"}]
     run_list:
       - recipe[multiple::default]
     verifier:
